--- a/loja/docker-compose.yaml
+++ b/loja/docker-compose.yaml
@@ -1,17 +1,22 @@
-version: '3.8'
 services:
+
   db:
-    image: postgres:15
+    image: mysql:8
+    command: --default-authentication-plugin=mysql_native_password
+    container_name: db_mysql
     restart: always
-    environment:
-      - POSTGRES_USER=root
-      - POSTGRES_PASSWORD=root
     ports:
-      - '5432:5432'
+      - '3306:3306'
     expose:
-      - 5432
+      - 3306
     volumes: 
-      - ./DB:/var/lib/postgresql/data
-volumes:
-  db:
-    driver: local
+      - ./mysql:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+
+  adminer:
+    image: adminer
+    restart: always
+    container_name: db_adminer
+    ports:
+      - 9000:9000
