--- a/loja/docker-compose.yaml
+++ b/loja/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     container_name: db_mysql
     restart: always
+    tty: true
     ports:
       - '3306:3306'
     expose:
