--- a/loja/docker-compose.yaml
+++ b/loja/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       - ./mysql:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: loja_db
+    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_general_ci']
 
   adminer:
     image: adminer
