--- a/loja/docker-compose.yaml
+++ b/loja/docker-compose.yaml
@@ -3,7 +3,6 @@ version: '3.3'
 services:
   db:
     image: mysql:8
-    command: --default-authentication-plugin=mysql_native_password
     container_name: db_mysql
     restart: always
     tty: true
@@ -16,7 +15,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: loja_db
-    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_general_ci']
+    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_general_ci', '--default-authentication-plugin=mysql_native_password']
 
   adminer:
     image: adminer
